--- a/popular/main.css
+++ b/popular/main.css
@@ -4,9 +4,61 @@
     font-size: 1.4rem;
     font-weight: bold;
 }
+body, html {
+  margin:0;
+  padding:0;
+  height:100%;
+  width:100%;
+}
+
+body {
+  position:relative;
+}
+
+#playVideo {
+  position:absolute; /* can't use fixed */
+  background:#3f4142;
+  height:100%;
+  width:100%;
+  top:0;
+  left:0;
+  z-index: 999;
+}
+
+#playVideo .videoecv {
+    width: 100%;
+    height: 100%;
+}
+
+#closeVideo {
+    z-index: 9999;
+    position: absolute;
+    cursor: pointer;
+    right: 8px;
+    top: 8px;
+}
+
+#closeVideo img {
+    width: 55px;
+}
+
+#closeVideo img:hover{
+    opacity: 0.8;
+    transition: 0.5s;
+}
+
+#titleSection {
+    margin: 0 0 20px;
+    padding: 5px 25px;
+    text-align: center;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 1.4rem;
+}
 
 body .bg-dark{
   background: #046cdf!important;
+  z-index: 1;
 }
 
 
@@ -100,4 +152,8 @@ body .bg-dark{
     cursor:pointer;
     bottom:10px;
     left:10px;
+}
+
+.video-popular .img-vid:hover .iconPlay{
+    background-image:url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' fill='dodgerblue' class='bi bi-play-circle-fill' viewBox='0 0 16 16'><path d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z'/></svg>");
 }
