temporadas en topvideos

--- a/popular/main.css
+++ b/popular/main.css
@@ -82,9 +82,19 @@ body .bg-dark{
     border-radius: 4px;
 }
 
-.video-popular .categories{
+.video-popular .info{
     margin-top: 4px;
+    border-bottom: 1px solid #f7f7f7;
+    margin-bottom: 8px;
+    padding-bottom: 6px;
 }
+
+.video-popular .categories {
+    display: inline-block;
+    width: 50%;
+}
+
+
 
 .video-popular .categories .category-item {
     border: 1px solid #8bc34a;
@@ -120,6 +130,10 @@ body .bg-dark{
     padding: 2px 8px;
     font-size: 12px;
     text-transform: uppercase;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 90px;
 }
 
 .video-popular .tags .tag-item:hover{
@@ -128,12 +142,12 @@ body .bg-dark{
 
 .video-popular .date {
     font-size: 12px;
-    border-top: 1px solid #f7f7f7;
-    margin-top: 4px;
-    padding-top: 6px;
+    display: inline-block;
+    text-align: right;
+    width: 48%;
 }
 
-.video-popular .img-vid {
+.video-popular .img-vid, #shows .img-vid{
     cursor: pointer;
     position: relative;
     width: 100%;
@@ -141,7 +155,7 @@ body .bg-dark{
     display: block;
 }
 
-.video-popular .iconPlay{
+.video-popular .iconPlay, #shows .video_serie .iconPlay{
     background-image:url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' fill='white' class='bi bi-play-circle-fill' viewBox='0 0 16 16'><path d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z'/></svg>");
     background-size:contain;
     background-repeat:no-repeat;
@@ -154,6 +168,42 @@ body .bg-dark{
     left:10px;
 }
 
-.video-popular .img-vid:hover .iconPlay{
+.video-popular .img-vid:hover .iconPlay, #shows .video_serie .img-vid:hover .iconPlay{
     background-image:url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' fill='dodgerblue' class='bi bi-play-circle-fill' viewBox='0 0 16 16'><path d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z'/></svg>");
+}
+
+.video_serie{
+    height: 260px;
+    margin-right: 20px;
+}
+.video_serie .season-title{
+    font-size: 1rem;
+    color: #3f4142;
+    font-weight: 500;
+    border-top: 1px solid #ccc;
+    margin-top: 14px;
+    padding-top: 10px;
+}
+
+#shows .flickity-prev-next-button.previous {
+    left: -55px;
+    background: #e8e8e8;
+    top: 40%;
+}
+#shows .flickity-prev-next-button.next {
+    right: -55px;
+    background: #e8e8e8;
+    top: 40%;
+}
+#shows .video_serie .netimg{
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    height: 172px;
+}
+
+#shows .show-title {
+    margin-bottom: 20px;
+    border-bottom: 1px solid #e8e7e7;
+    padding-bottom: 16px;
 }
