--- a/popular/main.css
+++ b/popular/main.css
@@ -147,7 +147,7 @@ body .bg-dark{
     width: 48%;
 }
 
-.video-popular .img-vid, #shows .img-vid{
+.video-popular .img-vid, .shows .img-vid{
     cursor: pointer;
     position: relative;
     width: 100%;
@@ -155,7 +155,7 @@ body .bg-dark{
     display: block;
 }
 
-.video-popular .iconPlay, #shows .video_serie .iconPlay{
+.video-popular .iconPlay, .shows .video_serie .iconPlay{
     background-image:url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' fill='white' class='bi bi-play-circle-fill' viewBox='0 0 16 16'><path d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z'/></svg>");
     background-size:contain;
     background-repeat:no-repeat;
@@ -168,7 +168,7 @@ body .bg-dark{
     left:10px;
 }
 
-.video-popular .img-vid:hover .iconPlay, #shows .video_serie .img-vid:hover .iconPlay{
+.video-popular .img-vid:hover .iconPlay, .shows .video_serie .img-vid:hover .iconPlay{
     background-image:url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' fill='dodgerblue' class='bi bi-play-circle-fill' viewBox='0 0 16 16'><path d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z'/></svg>");
 }
 .flickity-slider{
@@ -186,24 +186,24 @@ body .bg-dark{
     padding-top: 10px;
 }
 
-#shows .flickity-prev-next-button.previous {
+.shows .flickity-prev-next-button.previous {
     left: -55px;
     background: #e8e8e8;
     top: 40%;
 }
-#shows .flickity-prev-next-button.next {
+.shows .flickity-prev-next-button.next {
     right: -55px;
     background: #e8e8e8;
     top: 40%;
 }
-#shows .video_serie .netimg{
+.shows .video_serie .netimg{
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
     height: 172px;
 }
 
-#shows .show-title {
+.shows .show-title {
     margin-bottom: 20px;
     border-bottom: 1px solid #e8e7e7;
     padding-bottom: 16px;
