--- a/popular/main.css
+++ b/popular/main.css
@@ -67,20 +67,22 @@ body .bg-dark{
 }
 
 .video-popular .title{
-    font-size: 1.15rem;
-    color: #3f4142;
-    font-weight: 500;
-    line-height: 22px;
+    font-size: 1.25rem;
+    color: black;
+    font-weight: bold;
+    line-height: 1.4rem;
     border-top: 1px solid #ccc;
     margin-top: 14px;
     padding-top: 10px;
     display: block;
     text-decoration: none;
+    margin-bottom: 14px;
+    cursor: pointer;
 }
 
 .video-popular .title:hover {
-    font-weight: bold;
-    cursor: pointer;
+    opacity: 0.8;
+    transition: 0.5s;
 }
 
 .video-popular img{
