--- a/popular/main.css
+++ b/popular/main.css
@@ -159,7 +159,7 @@ new codido 3 portadas*/
   transition: 0.5s;
 }
 
-#titleSection {
+#titleSectionGo {
   margin: 0 0 20px;
   padding: 5px 0px;
   text-align: center;
