--- a/news-template/main.css
+++ b/news-template/main.css
@@ -6,3 +6,23 @@ body{
     margin: 40px auto;
     background: #fff;
 }
+.tit_nota1 .logoecu {
+  position: absolute;
+  float: right;
+  right: 3%;
+  top: 12%;
+  width: 10%;
+}
+.tit_nota1 .texto1 {
+  text-transform: uppercase;
+  font-size: 5rem;
+  font-weight: bold;
+  padding: 7% 5% 0;
+  line-height: 0.5;
+}
+.tit_nota1 .texto2 {
+  text-transform: uppercase;
+  font-size: 5rem;
+  font-weight: bold;
+  padding: 0 5% 0;
+}
