--- a/news-template/main.css
+++ b/news-template/main.css
@@ -13,16 +13,19 @@ body{
   top: 12%;
   width: 10%;
 }
-.tit_nota1 .texto1 {
+.tit_nota1 .text1 {
   text-transform: uppercase;
   font-size: 5rem;
   font-weight: bold;
   padding: 7% 5% 0;
   line-height: 0.5;
 }
-.tit_nota1 .texto2 {
+.tit_nota1 .text2 {
   text-transform: uppercase;
   font-size: 5rem;
   font-weight: bold;
   padding: 0 5% 0;
+}
+.tit_nota1 .imgn1 {
+  width: 100%;
 }
