--- a/news-template/main.css
+++ b/news-template/main.css
@@ -29,3 +29,37 @@ body{
 .tit_nota1 .imgn1 {
   width: 100%;
 }
+.tit_nota1 .newpost {
+  width: 22%;
+  height: 50%;
+  background: #0b109f;
+  position: absolute;
+  top: 132%;
+  left: 10%;
+  color: #fff;
+}
+.tit_nota1 .newpost .bloque1 {
+  margin: 70px 35px;
+}
+.tit_nota1 .newpost .bloque1 .textnew {
+  font-size: 50px;
+  color: #8190f9;
+  margin: 0;
+  line-height: 0.5;
+  font-weight: 300;
+}
+.tit_nota1 .newpost .bloque1 .textpost {
+  font-size: 85px;
+  margin: 0;
+  padding: 0;
+  font-weight: 700;
+}
+.tit_nota1 .newpost .url {
+  background: #5386d9;
+  position: absolute;
+  left: -23%;
+  top: 67%;
+  padding: 15px 60px;
+  font-weight: bold;
+  font-size: 23px;
+}
