--- a/news-template/main.css
+++ b/news-template/main.css
@@ -35,7 +35,7 @@ body{
   background: #0b109f;
   position: absolute;
   top: 132%;
-  left: 10%;
+  left: 9%;
   color: #fff;
 }
 .tit_nota1 .newpost .bloque1 {
@@ -57,9 +57,22 @@ body{
 .tit_nota1 .newpost .url {
   background: #5386d9;
   position: absolute;
-  left: -23%;
+  left: -20%;
   top: 67%;
   padding: 15px 60px;
   font-weight: bold;
   font-size: 23px;
+}
+.tit_nota1 .titulon1 {
+  font-size: 50px;
+  margin: 75px 30px 0px 50px;
+  font-weight: 700;
+  line-height: 1;
+  color: black;
+}
+.tit_nota1 .resumen {
+  margin: 20px 30px 0px 50px;
+  color: black;
+  font-size: 20px;
+  line-height: 1.3;
 }
