--- a/news-template/main.css
+++ b/news-template/main.css
@@ -26,51 +26,51 @@ body{
   font-weight: bold;
   padding: 0 5% 0;
 }
-.tit_nota1 .imgn1 {
+.tit_nota1 .imgpost .imgn1 {
   width: 100%;
 }
-.tit_nota1 .newpost {
+.tit_nota1 .imgpost .newpost {
   width: 22%;
   height: 50%;
   background: #0b109f;
   position: absolute;
   top: 132%;
-  left: 9%;
+  left: 10%;
   color: #fff;
 }
-.tit_nota1 .newpost .bloque1 {
+.tit_nota1 .imgpost .newpost .bloque1 {
   margin: 70px 35px;
 }
-.tit_nota1 .newpost .bloque1 .textnew {
+.tit_nota1 .imgpost .newpost .bloque1 .textnew {
   font-size: 50px;
   color: #8190f9;
   margin: 0;
   line-height: 0.5;
   font-weight: 300;
 }
-.tit_nota1 .newpost .bloque1 .textpost {
+.tit_nota1 .imgpost .newpost .bloque1 .textpost {
   font-size: 85px;
   margin: 0;
   padding: 0;
   font-weight: 700;
 }
-.tit_nota1 .newpost .url {
+.tit_nota1 .imgpost .newpost .url {
   background: #5386d9;
   position: absolute;
-  left: -20%;
+  left: -23%;
   top: 67%;
   padding: 15px 60px;
   font-weight: bold;
   font-size: 23px;
 }
-.tit_nota1 .titulon1 {
+.tit_nota1 .imgpost .titulon1 {
   font-size: 50px;
   margin: 75px 30px 0px 50px;
   font-weight: 700;
   line-height: 1;
   color: black;
 }
-.tit_nota1 .resumen {
+.tit_nota1 .imgpost .resumen {
   margin: 20px 30px 0px 50px;
   color: black;
   font-size: 20px;
